# UCV

./: .gitignore  CMakeLists.txt  ContourUncertainEnsemble.cxx  ContourUncertainEnsemble.h  ContourUncertainEnsemble2D.cxx  ContourUncertainEnsemble2D.h  ContourUncertainIndependentGaussian.cxx  ContourUncertainIndependentGaussian.h  ContourUncertainUniform.cxx  ContourUncertainUniform.h  LoadEnsAndProcess.cpp  LoadEnsAndProcessByEpanech.cpp  LoadEnsAndProcessByHistogram.cpp  LoadEnsAndProcessByMC.cpp  LoadEnsAndProcessByMVG.cpp  LoadEnsAndProcessByUniform.cpp  LoadWeatherProcessByEpanech.cpp  LoadWeatherProcessByUniform.cpp  README.md  SubsampleUncertaintyEnsemble.cxx  SubsampleUncertaintyEnsemble.h  SubsampleUncertaintyIndependentGaussian.cxx  SubsampleUncertaintyIndependentGaussian.h  SubsampleUncertaintyUniform.cxx  SubsampleUncertaintyUniform.h  TODO  compute_cases  compute_cases.cpp  compute_diff.py  decompose_3d_into_ensembles.cpp  extract_edges.cxx  point_to_cell.cxx  test_3D_el.cpp  test_adaptive_eigen.cpp  test_adaptive_eigen_pearson.cpp  test_composite.cpp  test_mvg_supernova.cpp  test_mvgaussian.cpp  test_mvgaussian_3d.cpp  test_mvgaussian_el_multiple_worklet.cpp  (+34 more)
critical_points_python/: NPMP.ipynb  NPMPSimplified.ipynb  create_critical_point_ens_data.py  create_critical_point_ens_data_for_hist.py  histogram_test.py  mSOFP_jupter.ipynb  minimaProbabilities.txt  minimaSuperOptimizedFiveVariableProbability.ipynb  redSea-epanechnikov-Gaussian-Uniform-Histogram-MinimaProbability.ipynb  windJan15-epanechnikov-Gaussian-Uniform-Histogram-MinimaProbability.ipynb
critical_points_python/utpy/: pipeline.py  pyvenv.cfg  utils.py  vis.py
exp_scripts/: frontier_run_redsea.sh  frontier_run_weather.sh  mac_run_all.sh  run_on_frontier.sh  run_on_frontier_astroidImpact.sh  run_on_frontier_redsea.sh  run_on_frontier_supernova.sh
exp_scripts/adaptive_eigens/: ackleyVis_Tailored.ipynb  beetle.ipynb  beetle_2.ipynb  load_bettle.py  run_on_frontier.sh  sanity_check.py
exp_scripts/bydataset/: beetle_uniform.py  crusher_2d.sh  crusher_3d.sh  crusher_all.sh  run_beetle.sh  run_beetle_compare_stage.sh  run_beetle_fixedblock.sh  run_beetle_python.sh  run_beetle_serial.sh  run_beetle_small.sh  run_beetle_small_fixedblock.sh  run_redsea.sh  run_supernova.sh  run_supernova_serial.sh  run_supernova_vary_datasize.sh  run_wind.sh
exp_scripts/comparison_with_others/: beetle_gaussian.py  beetle_uniform.py  run_beetle_python.sh  run_beetle_ucv.sh  run_beetle_ucv_crusher.sh  run_beetle_ucv_crusher_debug.sh  run_wind_ucv.sh  run_wind_ucv_crusher.sh  test.out
exp_scripts/create_dataset/: README.md  compute_entropy_change.py  compute_entropy_diff_between_all_no_ens.py  rawdata.py  rawdata_to_ensemble.py  rawdata_to_ensemble_change_sigma_of_ens.py  rawdata_to_ensemble_move_row_col.py  rawdata_to_ensemble_move_row_col_three_part.py  rawdata_to_ensemble_with_covariance.py  test_kmeans.py
install_scripts/: crusher_gpu.sh  frontier_gpu.sh  mac.sh  out_fiber_uncertainty.vtk  pelmutter_gpu.sh  settings.sh  summit_cpu.sh  summit_gpu.sh  ubuntu_cpu.sh  ubuntu_gpu.sh
pv-plugin/: CMakeLists.txt  TODO  UncertainAnalysis.xml  UncertainContour.xml  paraview.plugin
pv-plugin/UncertainAnalysis/: CMakeLists.txt  TestToVTKm.cpp  vtk.module  vtkUncertainContour.cxx  vtkUncertainContour.h
python_test/: wind_kde.py  wind_kde_2.py
pythonscript/: max_differences.py  redsea_scatter.py  supernova_scatter.py
ucvworklet/: AmrexMinMax.hpp  ComputeDiffSum.hpp  CreateNewKey.hpp  CriticalPointHistogramWorklet.hpp  CriticalPointMVGaussian.hpp  CriticalPointMonteCarlo.hpp  CriticalPointWorklet.hpp  CriticalPointWorkletEpanechAOUF.hpp  EntropyAdaptiveEigens.hpp  EntropyAdaptiveEigensPearson.hpp  EntropyAdaptiveEigens_bak.hpp  EntropyIndependentGaussian.hpp  EntropyKDE.hpp  EntropyMultivariantGaussian.hpp  EntropyUniform.hpp  ExtractHistogramForPointValues.hpp  ExtractMinMaxByErr.hpp  ExtractMinMaxOfPoint.hpp  ExtractingByNeigoborhoodEns.hpp  ExtractingByNeigoborhoodMeanRaw.hpp  ExtractingByNeigoborhoodMeanStdev.hpp  ExtractingByNeigoborhoodMinMax.hpp  ExtractingMeanRaw.hpp  ExtractingMeanStdev.hpp  ExtractingMinMax.hpp  ExtractingRaw.hpp  HelperComputeDiff.hpp  HelperProbKDE.hpp  KDEEntropy.hpp  KDEEntropy3D_back.hpp  MVGaussianByNeigoborhood.hpp  MVGaussianWithEnsemble2D.hpp  MVGaussianWithEnsemble2DComputeCases.hpp  MVGaussianWithEnsemble2DComputeEntropy.hpp  MVGaussianWithEnsemble2DPolyTryLialgEntropy.hpp  MVGaussianWithEnsemble2DSampling.hpp  MVGaussianWithEnsemble2DTryELComputeCase.hpp  MVGaussianWithEnsemble2DTryELEigenDecomp.hpp  MVGaussianWithEnsemble2DTryELEntropy.hpp  MVGaussianWithEnsemble2DTryELEntropyLessEigen.hpp  (+16 more)
uncertainty/: CMakeLists.txt  Fiber.cxx  Fiber.h  Fiber2Var.cxx  Fiber2Var.h  Fiber3Var.cxx  Fiber3Var.h  Fiber4Var.cxx  Fiber4Var.h  Fiber4VarOld.cxx  Fiber4VarOld2.cxx  Fiber4VarOld2.h  FiberMultiVar.cxx  FiberMultiVar.h  MeanField2Var.cxx  MeanField2Var.h  vtkm.module
uncertainty/pv-plugin/: CMakeLists.txt  UncertainFiberSurface.xml  paraview.plugin
uncertainty/pv-plugin/UncertainFiberSurface/: CMakeLists.txt  vtk.module  vtkFiberSurfaceUncertain.cxx  vtkFiberSurfaceUncertain.h
uncertainty/pythonscript/: redsea_scatter.py  supernova_scatter.py
uncertainty/testing/: CMakeLists.txt  DecomposeSuperNovaToEns.cxx  DiffCheck.cxx  Fiber.cxx  FiberSurfaceExample.cxx  TestAsteroidImpact2Var.cxx  TestAsteroidImpact3Var.cxx  TestAsteroidImpact3VarTruth.cxx  TestAsteroidImpact4Var.cxx  TestFiber.cxx  TestRedSea.cxx  TestRedSea2Var.cxx  TestRedSea2Varc.cxx  TestRedSea3Var.cxx  TestRedSea3VarMean.cxx  TestRedSea4Var.cxx  TestRedSea4Vardiff.cxx  TestRedSeaComparison.cxx  TestRedSeaMean.cxx  TestS3D2Var.cxx  TestS3D2VarTruth.cxx  TestS3D3Var.cxx  TestSuperNova.cxx  TestSuperNovaComparison.cxx  file_writer.txt  temp.cxx
uncertainty/worklet/: CMakeLists.txt  ComputeDiff.hpp  ExtractingByNeigoborhoodEnsTwoFields.hpp  ExtractingMinMax.hpp  ExtractingMinMaxFromMeanDev.hpp  ExtractingMinMaxFromMeanVarience.hpp  Fiber.h  Fiber2Var.h  Fiber3Var.h  Fiber4Var.h  Fiber4VarOld2.h  FiberMultiVar.h
(+42 files in other folders)
